[package]
name = "iota-wallet-python"
version = "0.2.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Python bindings for the IOTA wallet library"
documentation = "https://wiki.iota.org/wallet.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/wallet.rs"
license = "Apache-2.0"
keywords = ["iota", "wallet", "transaction", "python"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "iota_wallet"
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3.17", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }
log = { version = "0.4.14", default-features = false }
iota-wallet = { path = "../../../", version = "0.2.0", features = ["message_interface", "events"] }
once_cell = { version = "1.8.0", default-features = false }
serde_json = { version = "1.0.68", default-features = false }
tokio = { version = "1.12.0", default-features = false }

[dependencies.pyo3]
version = "0.13"
features = ["extension-module", "abi3-py36"]
