[package]
name = "iota-wallet"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bee-common = { version = "0.5.0", default-features = false }
futures = { version = "0.3.17", default-features = false }
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "dev", default-features = false, features = ["stronghold"] }
log = { version = "0.4.14", default-features = false }
once_cell = { version = "1.8.0", default-features = false }
riker = { version = "0.4.2", default-features = false }
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.68", default-features = false }
tokio = { version = "1.12.0", default-features = false}