[workspace]

[package]
name = "iota-wallet"
version = "1.0.0-rc.1"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Python bindings for the IOTA wallet library"
documentation = "https://wiki.iota.org/wallet.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/wallet.rs"
license = "Apache-2.0"
keywords = [ "iota", "wallet", "transaction", "python" ]
categories = [ "cryptography::cryptocurrencies" ]

[lib]
name = "iota_wallet"
crate-type = [ "cdylib" ]

[dependencies]
iota-wallet = { path = "../../", features = [ "message_interface", "events", "rocksdb", "ledger_nano" ] }

futures = { version = "0.3.26", default-features = false }
once_cell = { version = "1.17.0", default-features = false }
pyo3 = { version = "0.18.1", default-features = false, features = [ "macros", "extension-module" ] }
serde_json = { version = "1.0.93", default-features = false }
tokio = { version = "1.25.0", default-features = false }