[package]
name = "iota-wallet-java"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Java bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "client", "java" ]

[lib]
name = "iota_wallet"
crate-type = [ "cdylib" ]

[dependencies]
iota-wallet = { path = "../../../..", features = [ "message_interface", "events"] }

futures = { version = "0.3.25", default-features = false }
jni = { version = "0.20.0", default-features = false }
once_cell = { version = "1.17.0", default-features = false }
serde_json = { version = "1.0.91", default-features = false }
tokio = { version = "1.24.2", default-features = false, features = [ "macros" ] }
lazy_static = { version = "1.4.0", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
log = { version = "0.4.0", default-features = false }
android_logger = { version = "0.13", default-features = false }

[features]
ledger_nano = [ "iota-wallet/ledger_nano" ]